--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ body > footer a {
     font-size: 80px;
     color: #0043FF;
     line-height: 80px;
-    font-family: robotoBlack;
+    font-family: robotoBlack; /*nunitoblack robotoBlack*/
     width: 800px;
     text-align: left;
 }
@@ -145,6 +145,12 @@ body > footer a {
     text-align: left;
     margin: 20px 0;
 }
+.smallTitle {
+    font-size: 30px;
+    color: #0043FF;
+    font-family: robotoBlack;
+    text-align: center;
+}
 .blackTitle {
     font-size: 30px;
     color: #191919;
@@ -215,6 +221,22 @@ body > footer a {
 }
 .footerLink:hover {
     color: #c3c3c3;
+}
+.imageLink {
+    height: 80px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    margin: 40px;
+    /* -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); */
+}
+.imageLink:hover {
+    -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%);
+}
+.accImg {
+    height: 100%;
+    object-fit:cover;
 }
 @media only screen and (max-width: 1060px) {
     .margins {
