--- a/css/styles.css
+++ b/css/styles.css
@@ -39,13 +39,12 @@ body > footer a {
     flex-wrap: wrap;
 }
 .third {
-    width: 32%;
+    width: 326px;
     background: #2e363f;
     border: thin grey solid;
     border-radius: 10px;
     padding: 30px;
     height: 202px;
-    margin: 5px 0;
 }
 
 .header {
@@ -55,7 +54,7 @@ body > footer a {
     right: 0;
     height: 90vh;
     padding: 100px;
-    background-color: #03001C;
+    background-color: #000000; /*03001C*/
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,7 +62,7 @@ body > footer a {
 }
 .headerTitle {
     font-size: 80px;
-    color: #0043FF;
+    color: #FFFFFF; /*0043FF*/
     line-height: 80px;
     font-family: robotoBlack; /*nunitoblack robotoBlack*/
     width: 100%;
@@ -78,7 +77,7 @@ body > footer a {
     text-decoration: none;
     transition: all 0.3s ease;
     padding: 20px 0;
-    width: 200px;
+    width: 250px;
     text-align: center;
     position: relative;
     z-index: 3;
@@ -130,12 +129,17 @@ body > footer a {
     width: 100%; 
     border-color: #000 transparent transparent transparent;
     border-radius: 50%/100px 100px 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* overflow: hidden; */
 }
 
 
 .ecosystem {
     width: 1000px;
-    margin: auto;
+    /* margin: auto; */
 }
 .num {
    font-family: robotoBlack;
@@ -150,13 +154,17 @@ body > footer a {
     font-family: robotoBlack;
     color: white;
 }
+.pageMargins {
+    width: 1000px;
+    /* margin: auto; */
+}
 .wrapGrid {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    padding: 50px;
     justify-content: space-between;
     align-items: center;
+    margin: 40px 0;
 }
 .wrapList {
     padding: 0 50px 50px 50px;
@@ -277,7 +285,7 @@ body > footer a {
     height: 100%;
 }
 .speakerBox {
-    width: 20%;
+    width: 300px;
     margin: 40px 0 0 0;
 }
 .footer {
@@ -311,7 +319,7 @@ body > footer a {
     transition: all ease-in-out 0.3s;
 }
 .partnerLogo {
-    width: 24%;
+    width: 290px;
     height: 100px;
     align-items: center;
     justify-content: center;
@@ -348,20 +356,32 @@ body > footer a {
     opacity: 1;
 }
 @media only screen and (max-width: 1060px) {
-    .ecosystem {
+    .pageMargins {
         width: 800px;
     }
-    .speakerBox {
-        width: 33%;
+    .ecosystem {
+        width: 800px;
     }
     .num {
         font-size: 100px;
     }
     .partnerLogo {
-        width: 31%;
+        width: 340px;
+    }
+    .third {
+        width: 395px;
+    }
+    .speakerBox {
+        width: 230px;
+    }
+    .shortButton {
+        width: 90%;
     }
 }
 @media only screen and (max-width: 810px) {
+    .pageMargins {
+        width: 500px;
+    }
     .ecosystem {
         width: 400px;
     }
@@ -401,12 +421,18 @@ body > footer a {
         width: 50%;
     }
     .partnerLogo {
-        width: 47%;
+        width: 100%;
+    }
+    .speakerBox {
+        width: 200px;
     }
 }
 @media only screen and (max-width: 510px) {
+    .pageMargins {
+        width: 90%;
+    }
     .ecosystem {
-        width: 400px;
+        width: 100%;
     }
     .header {
         padding: 50px;
@@ -440,6 +466,24 @@ body > footer a {
     .logoTitle {
         height: 60px;
         width: 193px;
+    }
+    .buttonMargin {
+        margin: auto;
+        margin-top: 30px;
+    }
+    .whiteTitle {
+        font-size: 40px;
+    }
+    .blueTitle {
+        font-size: 40px;
+    }
+}
+@media only screen and (max-width: 400px) {
+    .whiteTitle {
+        font-size: 30px;
+    }
+    .blueTitle {
+        font-size: 30px;
     }
 }
 @media only screen and (max-width: 320px) {
