--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@
     font-family: nunitoblack;
     src: url(../assets/Nunito/static/Nunito-Medium.ttf);
 }
+@font-face {
+    font-family: abel;
+    src: url(../assets/Abel/Abel-Regular.ttf);
+}
 * {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -49,6 +53,11 @@ body > footer a {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+.iconFont {
+    font-family: abel;
+    color: black;
+    font-size: 20px;
 }
 .emptySpace {
     height: 150px;
