--- a/css/beta.css
+++ b/css/beta.css
@@ -262,6 +262,10 @@ body > footer a {
   font-family: robotoBlack;
   text-align: left;
 }
+.imageTitle {
+  align-items: center;
+  /* margin-top: -50px; */
+}
 .whiteText {
   color: black;
   font-size: 20px;
