--- a/css/beta.css
+++ b/css/beta.css
@@ -10,6 +10,10 @@
   font-family: abel;
   src: url(../assets/Abel/Abel-Regular.ttf);
 }
+@font-face {
+  font-family: dmBold;
+  src: url(../assets/DM_Sans/DMSans-Bold.ttf);
+}
 * {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -38,9 +42,107 @@ body > footer a {
 }
 .flexCenter {
   align-items: center;
+  justify-content: center;
 }
 .flexWrap {
   flex-wrap: wrap;
+}
+#bar1, #bar2, #bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+#bar1.change {
+  transform: translate(0, 11px) rotate(-45deg);
+}
+
+#bar2.change {opacity: 0;}
+
+#bar3.change {
+  transform: translate(0, -11px) rotate(45deg);
+}
+#hidingBox {
+  height: 200px;
+  top: -200px;
+  width: 100%;
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  background-color: black;
+}
+#navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  height: 60px;
+  width: 100vw;
+  z-index: 0;
+  top: 0;
+  background-color: black;
+  transform: translateY(-60px);
+  transition: all ease 0.5s;
+}
+#navbar.scrolled {
+  z-index: 3;
+  transform: translateY(0);
+  /* display: flex; */
+}
+#navbar.hidden {
+  display: none !important;
+}
+#navExpand {
+  display: none;
+}
+#clickAway {
+  display: none;
+}
+.navform {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  width: 100vw;
+  z-index: 3;
+  top: 0;
+  background-color: black;
+  transition: all ease 0.5s;
+}
+.smallLogo {
+  color: white;
+  height: 50px;
+  width: 161px;
+  cursor: pointer;
+  transition: all ease 0.5s;
+  margin-left: 20px;
+}
+.smallLogo:hover {
+  transform: scale(1.05);
+}
+.navLinks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.navLink {
+  color: white;
+  border: white thin solid;
+  border-radius: 50px;
+  margin: 0 5px;
+  padding: 10px 30px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all ease 0.5s;
+}
+.navLink:hover {
+  text-decoration: none;
+  color: black;
+  background-color: white;
 }
 .third {
   width: 33%;
@@ -62,6 +164,9 @@ body > footer a {
 .emptySpace {
   height: 150px;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header {
@@ -81,8 +186,9 @@ body > footer a {
   font-size: 80px;
   color: #FFFFFF; /*0043FF*/
   line-height: 80px;
-  font-family: robotoBlack; /*nunitoblack robotoBlack*/
+  font-family: dmBold; /*nunitoblack robotoBlack*/
   width: 100%;
+  letter-spacing: -5px;
   text-align: center;
 }
 .callButton {
@@ -116,7 +222,7 @@ body > footer a {
   background-color: #731cff6e;
 }
 .buttonMargin {
-  margin-top: 0px;
+  margin-top: 50px;
 }
 .logoTitle {
   color: white;
@@ -135,12 +241,16 @@ body > footer a {
   height: 30vh;
   width: 100%;
   display: flex;
+  background-color: #161b23;
   justify-content: center;
+  /* border-radius: 50%/40px 40px 0 0; */
   align-items: center;
 }
 .mainPage {
-  background-image: linear-gradient(180deg, #161b23, #f2ecfb 500px);
+  /* background-image: linear-gradient(180deg, #161b23, #f2ecfb 500px); */
+  background-image: linear-gradient(180deg, transparent, white 50px);
   /* background-color: #161b23; */
+  /* background-color: white; */
   margin-top: 70vh;
   position: relative;
   z-index: 1 !important;
@@ -148,6 +258,7 @@ body > footer a {
   width: 100%; 
   border-color: #000 transparent transparent transparent;
   border-radius: 50%/40px 40px 0 0;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -156,15 +267,22 @@ body > footer a {
 }
 
 
-.ecosystem {
-  width: 1000px;
+.ecosystemBackground {
+  width: 100%;
+  background-color: #161b23;
+  transition: all ease 0.2s;
   /* margin: auto; */
 }
+.ecosystem {
+  width: 1000px;
+  margin: auto;
+}
 .numCol {
-  background: white;
-  border-radius: 20px;
-  padding: 30px 40px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* background: white; */
+  /* border-radius: 20px; */
+  padding: 40px;
+  padding-bottom: 140px;
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 .num {
  font-family: robotoBlack;
@@ -176,8 +294,8 @@ body > footer a {
 .numText {
   text-align: center;
   font-size: 30px;
-  font-family: robotoBlack;
-  color: #721cff;
+  font-family: dmBold;
+  color: #FFFFFF;
 }
 .pageMargins {
   width: 1000px;
@@ -225,13 +343,12 @@ body > footer a {
   padding: 80px 100px 0 100px;
 }
 .blueTitle {
-  font-size: 30px;
+  font-size: 14px;
   color: #721cff;
   line-height: 50px;
-  font-family: abel;
+  font-family: dmBold;
   font-weight: bolder;
   text-align: left;
-  margin: 20px 0;
 }
 .whiteTitle {
   text-align: center;
@@ -258,9 +375,10 @@ body > footer a {
   text-align: center;
 }
 .blackTitle {
-  font-size: 30px;
+  font-size: 40px;
   color: black;
-  font-family: robotoBlack;
+  letter-spacing: -2px;
+  font-family: dmBold;
   text-align: left;
 }
 .imageTitle {
@@ -276,6 +394,25 @@ body > footer a {
   font-size: 20px;
   height: 80px;
   text-align: center;
+}
+.stepsBox {
+  width: 600px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.backgroundImg {
+  height: 400px;
+  width: 400px;
+  border-radius: 10px;
+  /* background-image: linear-gradient(180deg, lightblue 30%, blue); */
+  /* background-color: #721CFF; */
+  background-color: #161b23;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .imgPlaceholder {
   height: 400px;
@@ -409,10 +546,17 @@ body > footer a {
   .shortButton {
       width: 90%;
   }
+  .backgroundImg {
+    width: 300px;
+    height: 300px;
+  }
+  .stepsBox {
+    width: 500px;
+  }
 }
 @media only screen and (max-width: 810px) {
   .mainPage {
-      background-image: linear-gradient(180deg, #161b23, #f2ecfb 1800px);
+      background-image: linear-gradient(180deg, #161b23, #ffffff 1800px); /*f2ecfb*/
   }
   .emptySpace {
       height: 100px;
@@ -428,6 +572,7 @@ body > footer a {
   }
   .numCol {
       width: 100%;
+      padding-bottom: 40px;
   }
   .numText {
       margin-bottom: 50px;
@@ -437,6 +582,15 @@ body > footer a {
   }
   .textCol {
       flex-direction: column;
+  }
+  .reverseRow {
+    flex-direction: column-reverse;
+  }
+  .arrow {
+    display: none;
+  }
+  .stepsBox {
+    width: 100%;
   }
   .imgPlaceholder {
       margin: 0;
@@ -477,6 +631,7 @@ body > footer a {
   .headerTitle {
       font-size: 40px;
       line-height: 40px;
+      letter-spacing: -1px;
   }
   .blackBox {
       padding: 20px;
@@ -512,12 +667,62 @@ body > footer a {
       font-size: 40px;
   }
   .blueTitle {
-      font-size: 40px;
+      font-size: 14px;
   }
   .footer {
       display: flex;
       flex-direction: column;
       height: 70px;
+  }
+  #navbar {
+    flex-direction: column;
+    height: 70px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    /* transform: translateY(-240px); */
+    /* display: none; */
+  }
+  #navExpand {
+      display: flex;
+      position: absolute;
+      right: 30px;
+      top: 15px;
+      color: white;
+      display: inline-block;
+      cursor: pointer;
+  }
+  .navLinks {
+      flex-direction: column;
+      justify-content: space-between;
+      position: relative;
+      z-index: 0;
+      width: 100%;
+      transform: translateY(-240px);
+      background-color: black;
+      transition: all ease 0.5s;
+  }
+  .navLinks.expanded {
+      position: relative;
+      z-index: 3;
+      display: flex;
+      transform: translateY(0px);
+  }
+  .navLink {
+      color: white;
+      border: none;
+      border-top: white thin solid;
+      border-radius: 0px;
+      margin: 0;
+      padding: 30px;
+      text-decoration: none;
+      text-align: center;
+      width: 100%;
+      cursor: pointer;
+      transition: all ease 0.5s;
+  }
+  .smallLogo {
+      margin-top: 10px;
+      margin-bottom: 10px;
   }
 }
 @media only screen and (max-width: 400px) {
@@ -525,7 +730,7 @@ body > footer a {
       font-size: 30px;
   }
   .blueTitle {
-      font-size: 30px;
+      font-size: 14px;
   }
 }
 @media only screen and (max-width: 320px) {
@@ -539,5 +744,12 @@ body > footer a {
   .imgPlaceholder {
       width: 250px;
       height: 250px;
+  }
+  .stepsBox {
+    padding: 5px;
+  }
+  .backgroundImg {
+    width: 250px;
+    height: 250px;
   }
 }
