--- a/css/beta.css
+++ b/css/beta.css
@@ -396,7 +396,7 @@ body > footer a {
   text-align: center;
 }
 .stepsBox {
-  width: 600px;
+  width: 500px;
   padding: 50px;
   display: flex;
   flex-direction: column;
@@ -404,8 +404,8 @@ body > footer a {
   justify-content: center;
 }
 .backgroundImg {
-  height: 400px;
-  width: 400px;
+  height: 500px;
+  width: 500px;
   border-radius: 10px;
   /* background-image: linear-gradient(180deg, lightblue 30%, blue); */
   /* background-color: #721CFF; */
@@ -415,12 +415,12 @@ body > footer a {
   justify-content: center;
 }
 .infoImg {
-  height: 300px;
-  width: 300px;
-}
-.imgPlaceholder {
   height: 400px;
   width: 400px;
+}
+.imgPlaceholder {
+  height: 500px;
+  width: 500px;
   border-radius: 10px;
   overflow: hidden;
   overflow: none;
@@ -562,12 +562,12 @@ body > footer a {
       width: 90%;
   }
   .backgroundImg {
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
   }
   .infoImg {
-    height: 250px;
-    width: 250px;
+    height: 350px;
+    width: 350px;
   }
   .stepsBox {
     width: 500px;
@@ -742,6 +742,14 @@ body > footer a {
   .smallLogo {
       margin-top: 10px;
       margin-bottom: 10px;
+  }
+  .backgroundImg {
+    width: 300px;
+    height: 300px;
+  }
+  .infoImg {
+    height: 250px;
+    width: 250px;
   }
 }
 @media only screen and (max-width: 400px) {
